version_05_intermedia_04/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> FunctionList
Rule 2     FunctionList -> FunctionList FunctionDecl
Rule 3     FunctionList -> FunctionDecl
Rule 4     FunctionDecl -> Type ID ( ParamList ) Block
Rule 5     FunctionDecl -> Type ID ( ) Block
Rule 6     ParamList -> ParamList , Param
Rule 7     ParamList -> Param
Rule 8     Param -> Type ID
Rule 9     Block -> { Declarations Statements }
Rule 10    Declarations -> Declarations Declaration
Rule 11    Declarations -> empty
Rule 12    Declaration -> Type ID ;
Rule 13    Type -> INT
Rule 14    Type -> FLOAT
Rule 15    Type -> VOID
Rule 16    Statements -> Statements Statement
Rule 17    Statements -> empty
Rule 18    Statement -> Assignment
Rule 19    Assignment -> ID = Expression ;
Rule 20    Expression -> Relation
Rule 21    Relation -> Relation + Term
Rule 22    Relation -> Relation - Term
Rule 23    Relation -> Term
Rule 24    Term -> Term * Factor
Rule 25    Term -> Term / Factor
Rule 26    Term -> Factor
Rule 27    Factor -> INTLIT
Rule 28    Factor -> ID
Rule 29    Factor -> ( Expression )
Rule 30    empty -> <empty>

Terminals, with rules where they appear

(                    : 4 5 29
)                    : 4 5 29
*                    : 24
+                    : 21
,                    : 6
-                    : 22
/                    : 25
;                    : 12 19
=                    : 19
FLOAT                : 14
ID                   : 4 5 8 12 19 28
INT                  : 13
INTLIT               : 27
VOID                 : 15
error                : 
{                    : 9
}                    : 9

Nonterminals, with rules where they appear

Assignment           : 18
Block                : 4 5
Declaration          : 10
Declarations         : 9 10
Expression           : 19 29
Factor               : 24 25 26
FunctionDecl         : 2 3
FunctionList         : 1 2
Param                : 6 7
ParamList            : 4 6
Program              : 0
Relation             : 20 21 22
Statement            : 16
Statements           : 9 16
Term                 : 21 22 23 24 25
Type                 : 4 5 8 12
empty                : 11 17

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . FunctionList
    (2) FunctionList -> . FunctionList FunctionDecl
    (3) FunctionList -> . FunctionDecl
    (4) FunctionDecl -> . Type ID ( ParamList ) Block
    (5) FunctionDecl -> . Type ID ( ) Block
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Program                        shift and go to state 1
    FunctionList                   shift and go to state 2
    FunctionDecl                   shift and go to state 3
    Type                           shift and go to state 4

state 1

    (0) S' -> Program .



state 2

    (1) Program -> FunctionList .
    (2) FunctionList -> FunctionList . FunctionDecl
    (4) FunctionDecl -> . Type ID ( ParamList ) Block
    (5) FunctionDecl -> . Type ID ( ) Block
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    $end            reduce using rule 1 (Program -> FunctionList .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    FunctionDecl                   shift and go to state 8
    Type                           shift and go to state 4

state 3

    (3) FunctionList -> FunctionDecl .

    INT             reduce using rule 3 (FunctionList -> FunctionDecl .)
    FLOAT           reduce using rule 3 (FunctionList -> FunctionDecl .)
    VOID            reduce using rule 3 (FunctionList -> FunctionDecl .)
    $end            reduce using rule 3 (FunctionList -> FunctionDecl .)


state 4

    (4) FunctionDecl -> Type . ID ( ParamList ) Block
    (5) FunctionDecl -> Type . ID ( ) Block

    ID              shift and go to state 9


state 5

    (13) Type -> INT .

    ID              reduce using rule 13 (Type -> INT .)


state 6

    (14) Type -> FLOAT .

    ID              reduce using rule 14 (Type -> FLOAT .)


state 7

    (15) Type -> VOID .

    ID              reduce using rule 15 (Type -> VOID .)


state 8

    (2) FunctionList -> FunctionList FunctionDecl .

    INT             reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)
    FLOAT           reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)
    VOID            reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)
    $end            reduce using rule 2 (FunctionList -> FunctionList FunctionDecl .)


state 9

    (4) FunctionDecl -> Type ID . ( ParamList ) Block
    (5) FunctionDecl -> Type ID . ( ) Block

    (               shift and go to state 10


state 10

    (4) FunctionDecl -> Type ID ( . ParamList ) Block
    (5) FunctionDecl -> Type ID ( . ) Block
    (6) ParamList -> . ParamList , Param
    (7) ParamList -> . Param
    (8) Param -> . Type ID
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    )               shift and go to state 13
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Type                           shift and go to state 11
    ParamList                      shift and go to state 12
    Param                          shift and go to state 14

state 11

    (8) Param -> Type . ID

    ID              shift and go to state 15


state 12

    (4) FunctionDecl -> Type ID ( ParamList . ) Block
    (6) ParamList -> ParamList . , Param

    )               shift and go to state 16
    ,               shift and go to state 17


state 13

    (5) FunctionDecl -> Type ID ( ) . Block
    (9) Block -> . { Declarations Statements }

    {               shift and go to state 19

    Block                          shift and go to state 18

state 14

    (7) ParamList -> Param .

    )               reduce using rule 7 (ParamList -> Param .)
    ,               reduce using rule 7 (ParamList -> Param .)


state 15

    (8) Param -> Type ID .

    )               reduce using rule 8 (Param -> Type ID .)
    ,               reduce using rule 8 (Param -> Type ID .)


state 16

    (4) FunctionDecl -> Type ID ( ParamList ) . Block
    (9) Block -> . { Declarations Statements }

    {               shift and go to state 19

    Block                          shift and go to state 20

state 17

    (6) ParamList -> ParamList , . Param
    (8) Param -> . Type ID
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Param                          shift and go to state 21
    Type                           shift and go to state 11

state 18

    (5) FunctionDecl -> Type ID ( ) Block .

    INT             reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)
    FLOAT           reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)
    VOID            reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)
    $end            reduce using rule 5 (FunctionDecl -> Type ID ( ) Block .)


state 19

    (9) Block -> { . Declarations Statements }
    (10) Declarations -> . Declarations Declaration
    (11) Declarations -> . empty
    (30) empty -> .

    INT             reduce using rule 30 (empty -> .)
    FLOAT           reduce using rule 30 (empty -> .)
    VOID            reduce using rule 30 (empty -> .)
    }               reduce using rule 30 (empty -> .)
    ID              reduce using rule 30 (empty -> .)

    Declarations                   shift and go to state 22
    empty                          shift and go to state 23

state 20

    (4) FunctionDecl -> Type ID ( ParamList ) Block .

    INT             reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)
    FLOAT           reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)
    VOID            reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)
    $end            reduce using rule 4 (FunctionDecl -> Type ID ( ParamList ) Block .)


state 21

    (6) ParamList -> ParamList , Param .

    )               reduce using rule 6 (ParamList -> ParamList , Param .)
    ,               reduce using rule 6 (ParamList -> ParamList , Param .)


state 22

    (9) Block -> { Declarations . Statements }
    (10) Declarations -> Declarations . Declaration
    (16) Statements -> . Statements Statement
    (17) Statements -> . empty
    (12) Declaration -> . Type ID ;
    (30) empty -> .
    (13) Type -> . INT
    (14) Type -> . FLOAT
    (15) Type -> . VOID

    }               reduce using rule 30 (empty -> .)
    ID              reduce using rule 30 (empty -> .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    VOID            shift and go to state 7

    Statements                     shift and go to state 24
    Declaration                    shift and go to state 25
    empty                          shift and go to state 26
    Type                           shift and go to state 27

state 23

    (11) Declarations -> empty .

    INT             reduce using rule 11 (Declarations -> empty .)
    FLOAT           reduce using rule 11 (Declarations -> empty .)
    VOID            reduce using rule 11 (Declarations -> empty .)
    }               reduce using rule 11 (Declarations -> empty .)
    ID              reduce using rule 11 (Declarations -> empty .)


state 24

    (9) Block -> { Declarations Statements . }
    (16) Statements -> Statements . Statement
    (18) Statement -> . Assignment
    (19) Assignment -> . ID = Expression ;

    }               shift and go to state 28
    ID              shift and go to state 31

    Statement                      shift and go to state 29
    Assignment                     shift and go to state 30

state 25

    (10) Declarations -> Declarations Declaration .

    INT             reduce using rule 10 (Declarations -> Declarations Declaration .)
    FLOAT           reduce using rule 10 (Declarations -> Declarations Declaration .)
    VOID            reduce using rule 10 (Declarations -> Declarations Declaration .)
    }               reduce using rule 10 (Declarations -> Declarations Declaration .)
    ID              reduce using rule 10 (Declarations -> Declarations Declaration .)


state 26

    (17) Statements -> empty .

    }               reduce using rule 17 (Statements -> empty .)
    ID              reduce using rule 17 (Statements -> empty .)


state 27

    (12) Declaration -> Type . ID ;

    ID              shift and go to state 32


state 28

    (9) Block -> { Declarations Statements } .

    INT             reduce using rule 9 (Block -> { Declarations Statements } .)
    FLOAT           reduce using rule 9 (Block -> { Declarations Statements } .)
    VOID            reduce using rule 9 (Block -> { Declarations Statements } .)
    $end            reduce using rule 9 (Block -> { Declarations Statements } .)


state 29

    (16) Statements -> Statements Statement .

    }               reduce using rule 16 (Statements -> Statements Statement .)
    ID              reduce using rule 16 (Statements -> Statements Statement .)


state 30

    (18) Statement -> Assignment .

    }               reduce using rule 18 (Statement -> Assignment .)
    ID              reduce using rule 18 (Statement -> Assignment .)


state 31

    (19) Assignment -> ID . = Expression ;

    =               shift and go to state 33


state 32

    (12) Declaration -> Type ID . ;

    ;               shift and go to state 34


state 33

    (19) Assignment -> ID = . Expression ;
    (20) Expression -> . Relation
    (21) Relation -> . Relation + Term
    (22) Relation -> . Relation - Term
    (23) Relation -> . Term
    (24) Term -> . Term * Factor
    (25) Term -> . Term / Factor
    (26) Term -> . Factor
    (27) Factor -> . INTLIT
    (28) Factor -> . ID
    (29) Factor -> . ( Expression )

    INTLIT          shift and go to state 40
    ID              shift and go to state 35
    (               shift and go to state 41

    Expression                     shift and go to state 36
    Relation                       shift and go to state 37
    Term                           shift and go to state 38
    Factor                         shift and go to state 39

state 34

    (12) Declaration -> Type ID ; .

    INT             reduce using rule 12 (Declaration -> Type ID ; .)
    FLOAT           reduce using rule 12 (Declaration -> Type ID ; .)
    VOID            reduce using rule 12 (Declaration -> Type ID ; .)
    }               reduce using rule 12 (Declaration -> Type ID ; .)
    ID              reduce using rule 12 (Declaration -> Type ID ; .)


state 35

    (28) Factor -> ID .

    *               reduce using rule 28 (Factor -> ID .)
    /               reduce using rule 28 (Factor -> ID .)
    +               reduce using rule 28 (Factor -> ID .)
    -               reduce using rule 28 (Factor -> ID .)
    ;               reduce using rule 28 (Factor -> ID .)
    )               reduce using rule 28 (Factor -> ID .)


state 36

    (19) Assignment -> ID = Expression . ;

    ;               shift and go to state 42


state 37

    (20) Expression -> Relation .
    (21) Relation -> Relation . + Term
    (22) Relation -> Relation . - Term

    ;               reduce using rule 20 (Expression -> Relation .)
    )               reduce using rule 20 (Expression -> Relation .)
    +               shift and go to state 43
    -               shift and go to state 44


state 38

    (23) Relation -> Term .
    (24) Term -> Term . * Factor
    (25) Term -> Term . / Factor

    +               reduce using rule 23 (Relation -> Term .)
    -               reduce using rule 23 (Relation -> Term .)
    ;               reduce using rule 23 (Relation -> Term .)
    )               reduce using rule 23 (Relation -> Term .)
    *               shift and go to state 45
    /               shift and go to state 46


state 39

    (26) Term -> Factor .

    *               reduce using rule 26 (Term -> Factor .)
    /               reduce using rule 26 (Term -> Factor .)
    +               reduce using rule 26 (Term -> Factor .)
    -               reduce using rule 26 (Term -> Factor .)
    ;               reduce using rule 26 (Term -> Factor .)
    )               reduce using rule 26 (Term -> Factor .)


state 40

    (27) Factor -> INTLIT .

    *               reduce using rule 27 (Factor -> INTLIT .)
    /               reduce using rule 27 (Factor -> INTLIT .)
    +               reduce using rule 27 (Factor -> INTLIT .)
    -               reduce using rule 27 (Factor -> INTLIT .)
    ;               reduce using rule 27 (Factor -> INTLIT .)
    )               reduce using rule 27 (Factor -> INTLIT .)


state 41

    (29) Factor -> ( . Expression )
    (20) Expression -> . Relation
    (21) Relation -> . Relation + Term
    (22) Relation -> . Relation - Term
    (23) Relation -> . Term
    (24) Term -> . Term * Factor
    (25) Term -> . Term / Factor
    (26) Term -> . Factor
    (27) Factor -> . INTLIT
    (28) Factor -> . ID
    (29) Factor -> . ( Expression )

    INTLIT          shift and go to state 40
    ID              shift and go to state 35
    (               shift and go to state 41

    Expression                     shift and go to state 47
    Relation                       shift and go to state 37
    Term                           shift and go to state 38
    Factor                         shift and go to state 39

state 42

    (19) Assignment -> ID = Expression ; .

    }               reduce using rule 19 (Assignment -> ID = Expression ; .)
    ID              reduce using rule 19 (Assignment -> ID = Expression ; .)


state 43

    (21) Relation -> Relation + . Term
    (24) Term -> . Term * Factor
    (25) Term -> . Term / Factor
    (26) Term -> . Factor
    (27) Factor -> . INTLIT
    (28) Factor -> . ID
    (29) Factor -> . ( Expression )

    INTLIT          shift and go to state 40
    ID              shift and go to state 35
    (               shift and go to state 41

    Term                           shift and go to state 48
    Factor                         shift and go to state 39

state 44

    (22) Relation -> Relation - . Term
    (24) Term -> . Term * Factor
    (25) Term -> . Term / Factor
    (26) Term -> . Factor
    (27) Factor -> . INTLIT
    (28) Factor -> . ID
    (29) Factor -> . ( Expression )

    INTLIT          shift and go to state 40
    ID              shift and go to state 35
    (               shift and go to state 41

    Term                           shift and go to state 49
    Factor                         shift and go to state 39

state 45

    (24) Term -> Term * . Factor
    (27) Factor -> . INTLIT
    (28) Factor -> . ID
    (29) Factor -> . ( Expression )

    INTLIT          shift and go to state 40
    ID              shift and go to state 35
    (               shift and go to state 41

    Factor                         shift and go to state 50

state 46

    (25) Term -> Term / . Factor
    (27) Factor -> . INTLIT
    (28) Factor -> . ID
    (29) Factor -> . ( Expression )

    INTLIT          shift and go to state 40
    ID              shift and go to state 35
    (               shift and go to state 41

    Factor                         shift and go to state 51

state 47

    (29) Factor -> ( Expression . )

    )               shift and go to state 52


state 48

    (21) Relation -> Relation + Term .
    (24) Term -> Term . * Factor
    (25) Term -> Term . / Factor

    +               reduce using rule 21 (Relation -> Relation + Term .)
    -               reduce using rule 21 (Relation -> Relation + Term .)
    ;               reduce using rule 21 (Relation -> Relation + Term .)
    )               reduce using rule 21 (Relation -> Relation + Term .)
    *               shift and go to state 45
    /               shift and go to state 46


state 49

    (22) Relation -> Relation - Term .
    (24) Term -> Term . * Factor
    (25) Term -> Term . / Factor

    +               reduce using rule 22 (Relation -> Relation - Term .)
    -               reduce using rule 22 (Relation -> Relation - Term .)
    ;               reduce using rule 22 (Relation -> Relation - Term .)
    )               reduce using rule 22 (Relation -> Relation - Term .)
    *               shift and go to state 45
    /               shift and go to state 46


state 50

    (24) Term -> Term * Factor .

    *               reduce using rule 24 (Term -> Term * Factor .)
    /               reduce using rule 24 (Term -> Term * Factor .)
    +               reduce using rule 24 (Term -> Term * Factor .)
    -               reduce using rule 24 (Term -> Term * Factor .)
    ;               reduce using rule 24 (Term -> Term * Factor .)
    )               reduce using rule 24 (Term -> Term * Factor .)


state 51

    (25) Term -> Term / Factor .

    *               reduce using rule 25 (Term -> Term / Factor .)
    /               reduce using rule 25 (Term -> Term / Factor .)
    +               reduce using rule 25 (Term -> Term / Factor .)
    -               reduce using rule 25 (Term -> Term / Factor .)
    ;               reduce using rule 25 (Term -> Term / Factor .)
    )               reduce using rule 25 (Term -> Term / Factor .)


state 52

    (29) Factor -> ( Expression ) .

    *               reduce using rule 29 (Factor -> ( Expression ) .)
    /               reduce using rule 29 (Factor -> ( Expression ) .)
    +               reduce using rule 29 (Factor -> ( Expression ) .)
    -               reduce using rule 29 (Factor -> ( Expression ) .)
    ;               reduce using rule 29 (Factor -> ( Expression ) .)
    )               reduce using rule 29 (Factor -> ( Expression ) .)

